--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -4,8 +4,8 @@
   --palette-green: #66bb6a;
   --palette-midnight: #141725;
   --palette-pale-blue: #b1b5d3;
-  --palette-pink: #d14671;
-  --palette-pink-darker: #be2f5b;
+  --palette-zum: #28c76f;
+  --palette-zum-darker: #1d8a4e;
   --palette-rock: rgb(var(--palette-rock-raw));
   --palette-rock-raw: 38, 40, 51;
   --palette-sky: #81d3f9;
@@ -47,9 +47,9 @@
   --ifm-code-color: var(--palette-white);
   --ifm-code-font-size: var(--font-size-small);
   --ifm-color-emphasis-300: var(--palette-pale-blue);
-  --ifm-color-primary: var(--palette-pink);
+  --ifm-color-primary: var(--palette-zum);
   --ifm-color-primary-dark: #c93261;
-  --ifm-color-primary-darker: var(--palette-pink-darker);
+  --ifm-color-primary-darker: var(--palette-zum-darker);
   --ifm-color-primary-darkest: #9c274b;
   --ifm-color-primary-light: #d75c82;
   --ifm-color-primary-lighter: #d9688b;
@@ -106,9 +106,9 @@
   --theme-alert-info-heading-text-color: #000;
   --theme-alert-info-text-color: var(--palette-pale-blue);
 
-  --theme-button-primary-background-color: var(--palette-pink);
+  --theme-button-primary-background-color: var(--palette-zum);
   --theme-button-primary-text-color: var(--palette-white);
-  --theme-button-primary-hover-background-color: var(--palette-pink-darker);
+  --theme-button-primary-hover-background-color: var(--palette-zum-darker);
 
   --theme-button-secondary-background-color: var(--palette-white);
   --theme-button-secondary-text-color: var(--palette-charade);
@@ -188,9 +188,9 @@ html[data-theme="light"] {
 
   --theme-contribute-text-color: var(--palette-dark-80);
 
-  --theme-button-primary-background-color: var(--palette-pink);
+  --theme-button-primary-background-color: var(--palette-zum);
   --theme-button-primary-text-color: var(--palette-white);
-  --theme-button-primary-hover-background-color: var(--palette-pink-darker);
+  --theme-button-primary-hover-background-color: var(--palette-zum-darker);
 
   --theme-button-secondary-background-color: var(--palette-dark-10);
   --theme-button-secondary-text-color: var(--palette-charade);
@@ -234,7 +234,7 @@ html[data-theme="dark"] .DocSearch {
 
 nav {
   --ifm-font-size-base: var(--font-size-normal);
-  --ifm-link-color: var(--palette-pink);
+  --ifm-link-color: var(--palette-zum);
 }
 
 .markdown {
@@ -370,7 +370,7 @@ html[data-theme='light'] .blog-wrapper header h2 a{
  **/
 
 .pagination-nav__item--next .pagination-nav__link {
-  background: var(--palette-pink);
+  background: var(--palette-zum);
 }
 
 .pagination-nav__link {
@@ -378,7 +378,7 @@ html[data-theme='light'] .blog-wrapper header h2 a{
 }
 
 html[data-theme='light'] .pagination-nav__item--next .pagination-nav__link {
-  background: var(--palette-pink);
+  background: var(--palette-zum);
   color: var(--palette-white);
 }
 
