--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -4,7 +4,7 @@
   --palette-green: #66bb6a;
   --palette-midnight: #141725;
   --palette-pale-blue: #b1b5d3;
-  --palette-zum: #28c76f;
+  --palette-zum: #42BE81;
   --palette-zum-darker: #1d8a4e;
   --palette-rock: rgb(var(--palette-rock-raw));
   --palette-rock-raw: 38, 40, 51;
@@ -27,7 +27,7 @@
   --transition-bezier: cubic-bezier(0.17, 0.67, 0.83, 0.67);
   --transition-fastest: 100ms;
 
-  --font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  --font-family-base: -apple-system, Inter, BlinkMacSystemFont, "Segoe UI", Roboto,
     Ubuntu, Cantarell, Helvetica, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Android Emoji", EmojiSymbols, "EmojiOne Mozilla",
     "Twemoji Mozilla", "Segoe UI Symbol", "Noto Color Emoji";
