--- a/src/css/product-metrics/product-metrics.module.css
+++ b/src/css/product-metrics/product-metrics.module.css
@@ -21,7 +21,7 @@
 }
 
 .product-metric__content svg path {
-  fill: var(--palette-pink);
+  fill: var(--palette-zum);
 }
 
 .product-metric__content__text {
