--- a/src/css/customers/quote.module.css
+++ b/src/css/customers/quote.module.css
@@ -78,7 +78,7 @@
 
 .quote__chevron {
   margin-right: 0.25rem;
-  color: var(--palette-pink);
+  color: var(--palette-zum);
   font-weight: var(--ifm-font-weight-bold);
 }
 
@@ -148,7 +148,7 @@
 }
 
 .controls__pin--selected {
-  background: var(--palette-pink);
+  background: var(--palette-zum);
 }
 
 .controls__pin:last-of-type {
