--- a/src/css/enterprise/performance.module.css
+++ b/src/css/enterprise/performance.module.css
@@ -37,12 +37,12 @@
   height: 0.65rem;
   width: 0.65rem;
   border-radius: 50%;
-  border: 2px solid var(--palette-pink);
+  border: 2px solid var(--palette-zum);
 }
 
 .performance__item--important {
   margin-bottom: 2rem;
-  color: var(--palette-pink);
+  color: var(--palette-zum);
   font-weight: var(--ifm-font-weight-semibold);
 }
 
