--- a/src/css/index/jumbotron.module.css
+++ b/src/css/index/jumbotron.module.css
@@ -25,7 +25,7 @@
 .jumbotron__description {
   margin: 0;
   padding-right: 2rem;
-  color: var(--palette-pink);
+  color: var(--palette-zum);
   font-size: var(--font-size-large);
 }
 
