--- a/src/css/section.module.css
+++ b/src/css/section.module.css
@@ -14,8 +14,8 @@
 }
 
 .section--accent {
-  --ifm-link-hover-color: var(--palette-pink);
-  --ifm-link-color: var(--palette-pink);
+  --ifm-link-hover-color: var(--palette-zum);
+  --ifm-link-color: var(--palette-zum);
   padding-top: 7rem;
   padding-bottom: 7.5rem;
 }
@@ -36,8 +36,8 @@
 }
 
 .section--slim--accent {
-  --ifm-link-hover-color: var(--palette-pink);
-  --ifm-link-color: var(--palette-pink);
+  --ifm-link-hover-color: var(--palette-zum);
+  --ifm-link-color: var(--palette-zum);
   padding-top: 7rem;
   padding-bottom: 1.5rem;
 }
@@ -66,7 +66,7 @@
 }
 
 .section__title__em {
-  color: var(--palette-pink);
+  color: var(--palette-zum);
   font-style: normal;
 }
 
