--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -145,7 +145,7 @@ html[data-theme='light'] .doc {
   left: -18px;
   width: 3px;
   content: " ";
-  background: var(--palette-pink);
+  background: var(--palette-zum);
 }
 
 ul ul :global(.table-of-contents__link--active::before) {
