--- a/src/css/index/showcase.module.css
+++ b/src/css/index/showcase.module.css
@@ -237,7 +237,7 @@
 }
 
 @media (max-width: 450px) {
-  :global(.prism-code.language-questdb-sql) > div {
+  :global(.prism-code.language-json) > div {
     white-space: pre-line;
     padding: 1rem;
   }
