--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -201,8 +201,8 @@ html[data-theme="light"] {
   --theme-button-primary-text-color: var(--palette-white);
   --theme-button-primary-hover-background-color: var(--palette-zum-darker);
 
-  --theme-button-secondary-background-color: var(--palette-dark-10);
-  --theme-button-secondary-text-color: var(--palette-charade);
+  --theme-button-secondary-background-color: var(--palette-zum-darker);
+  --theme-button-secondary-text-color: var(--palette-white);
   --theme-button-secondary-hover-background-color: var(--palette-dark-30);
 
   --theme-button-tertiary-background-color: var(--palette-dark-30);
