--- a/src/css/index/usp.module.css
+++ b/src/css/index/usp.module.css
@@ -27,6 +27,7 @@
   margin: 0;
   color: var(--palette-pale-blue);
   font-size: var(--font-size-normal);
+  margin-bottom: 1rem;
 }
 
 .usp__description::before {
