--- a/src/css/section.module.css
+++ b/src/css/section.module.css
@@ -2,6 +2,20 @@
   width: 100%;
 }
 
+.section__container {
+  display: flex;
+  place-content: center;
+  margin-top: 1rem;
+}
+
+.section__container h2 {
+  margin-left: 1rem;
+}
+
+.section__container svg {
+  margin-top: 0.5rem;
+}
+
 .section--inner {
   --ifm-code-padding-horizontal: 1.5rem;
   --ifm-code-padding-vertical: 1rem;
@@ -52,7 +66,7 @@
 .section--slim--accent {
   --ifm-link-hover-color: var(--palette-zum);
   --ifm-link-color: var(--palette-zum);
-  padding-top: 7rem;
+  padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
 
